# rust-webgl-tetrahedron

./: .gitignore  1.index.js  2.index.js  Cargo.toml  README.md  index.ejs  index.html  index.js  package-lock.json  package.json  webpack.config.js
assets/: tetra.vert
assets/models/: ico.blend  ico.glb
assets/shaders/: tetra.frag  tetra.vert
public/: index.css  index.ejs  index.js
src/: gl_buffer.rs  lib.rs  program_info.rs
src/gl_abstraction/: buffer.rs  mod.rs  program.rs  shader.rs  texture.rs
