[package]
name = "rust-webgl-tetrahedron"
version = "0.1.0"
authors = ["Benjamin Hinchliff <benjamin.hinchliff@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
nalgebra = "0.21"
console_log = { version = "0.2", features = ["color"] }
log = "0.4"
gltf = { version = "0.15", features = ["utils", "import"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "HtmlCanvasElement",
  "WebGlBuffer",
  "WebGlRenderingContext",
  "WebGlProgram",
  "WebGlShader",
  "WebGlUniformLocation",
  "ImageData",
  "WebGlTexture",
  "Window",
  "console",
]
